<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">  <!-- IMPORTANT: This must be set -->

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sorty.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_subjects"
        android:name="com.example.sorty.ui.subjects.SubjectsFragment"
        android:label="@string/title_subjects"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.sorty.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>